<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!--implementation 'com.android.support:design:28.0.0' faz o TextViewInput funcionar-->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            >
        <!--Número da OS-->
        <EditText
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/n_os"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/n_os"
                android:inputType="number"
                android:textColor="@color/colorPrimaryDark"

                />
    </android.support.design.widget.TextInputLayout>
    <!--Spinner Lista Serviço -->
    <Spinner
            android:id="@+id/lista_servico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:entries="@array/lista_servico"
            android:theme="@style/Theme.AppCompat.Light"
    />

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            >
        <!--Produto-->
        <EditText
                android:id="@+id/produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prod"
               android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorPrimaryDark"
                />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            >
        <!--Cliente-->
        <EditText
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cliente"
                android:textColor="@color/colorPrimaryDark"
                />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            >
        <!--Endereco-->
        <EditText
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco"
                android:textColor="@color/colorPrimaryDark"
                />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>